--- a/index.html
+++ b/index.html
@@ -13,27 +13,30 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<ul>
+<div class="container">
+  <div class="row">
+  	<ul>
             <li>
                 <a href="resume.html">Resume</a>
+                <br>
             </li>
             <li>
                 <a href="portfolio.html">Online Portfolio</a>
+                 <br>
             </li>
             <li>
                 <a href="contact.html">Contact</a>
+                 <br>
             </li>
         </ul>
-<div class="container">
-  <div class="row">
             <h1>Miranda Shugars</h1>
-            <h3>Online Repository</h3>
+            <h4>Online Repository</h4>
             <br>
             <br>
 
             <div class="row">
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 1" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/2255EE"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Puddle" href="#"><img class="thumbnail img-responsive" src="photo/ph1/1_sm"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="photo/ph1/1_sm"><img class="thumbnail img-responsive" src="photo/ph1/1_sm"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/449955/FFF"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/992233"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/2255EE"></a></div>
@@ -46,7 +49,9 @@
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/992233"></a></div>
     </div>
     <hr>
-    <a href="http://bootply.com/71401">Edit on Bootply</a>
+    <a href="http://bootply.com/71401">Contact</a>
+    <a href="http://bootply.com/71401">Resume</a>
+    <a href="http://bootply.com/71401">Online Portfolio</a>
     <hr>
   </div>
 </div>
