--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <br>
 
-            <div class="row">
+           <!-- <div class="row">
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Puddle" href="#"><img class="thumbnail img-responsive" src="photo/ph1/1_sm.jpg"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="photo/ph1/2_sm.jpg"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="photo/ph1/3_sm.jpg"></a></div>
@@ -33,19 +33,19 @@
       <div class="col-lg-3 col-sm-3 col-xs-1"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/449955/FFF"></a></div>
       <div class="col-lg-2 col-sm-3 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/DDD"></a></div>
       <div class="col-lg-3 col-sm-3 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/992233"></a></div>
-    </div>
+    </div> -->
     
                         <div class="row">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="row">
-                                <a href="http://41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="People walking down stairs" class="col-sm-4">
-                                    <img src="//41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" class="img-responsive">
+                                <a href="photo/ph1/1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor Memorial" class="col-sm-4">
+                                    <img src="photo/ph1/1_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="http://41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Man getting wet" class="col-sm-4">
-                                    <img src="//41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" class="img-responsive">
+                                <a href="photo/ph1/2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pear Harbor" class="col-sm-4">
+                                    <img src="photo/ph1/2_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="http://41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Someone lost their dress" class="col-sm-4">
-                                    <img src="//41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" class="img-responsive">
+                                <a href="photo/ph1/3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="USS Arizona" class="col-sm-4">
+                                    <img src="photo/ph1/3_sm.jpg" class="img-responsive">
                                 </a>
                             </div>
                             <div class="row">
