--- a/index.html
+++ b/index.html
@@ -38,25 +38,26 @@
                         <div class="row">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="row">
-                                <a href="photo/ph1/1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor Memorial" class="col-sm-4">
+                                <a href="photo/ph1/1_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-4">
                                     <img src="photo/ph1/1_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="photo/ph1/2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pear Harbor" class="col-sm-4">
+                                <a href="photo/ph1/2_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-4">
                                     <img src="photo/ph1/2_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="photo/ph1/3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="USS Arizona" class="col-sm-4">
+                                <a href="photo/ph1/3_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-4">
                                     <img src="photo/ph1/3_sm.jpg" class="img-responsive">
                                 </a>
                             </div>
+                            <br>
                             <div class="row">
-                                <a href="http://41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-footer="Big ass waterfall- using footer instead of title" class="col-sm-4">
-                                    <img src="//41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" class="img-responsive">
+                                <a href="columbia/1/sectionNOZOMBIES2_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="New York | Post-Capitolism" class="col-sm-4">
+                                    <img src="columbia/1/sectionNOZOMBIES2_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="http://40.media.tumblr.com/f9fcf4cae3468d96a324cae301c00998/tumblr_mrn3dc10Wa1r1thfzo3_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Cool bottle" data-footer="Now fill it with whiskey" class="col-sm-4">
-                                    <img src="//40.media.tumblr.com/f9fcf4cae3468d96a324cae301c00998/tumblr_mrn3dc10Wa1r1thfzo3_1280.jpg" class="img-responsive">
+                                <a href="columbia/1/axo explosion_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="Components: translucent sandstone facade, sedum gardens, stair core." class="col-sm-4">
+                                    <img src="columbia/1/axo explosion_sm.jpg" class="img-responsive">
                                 </a>
-                                <a href="http://36.media.tumblr.com/de356cd6570d7c26e73979467f296f67/tumblr_mrn3dc10Wa1r1thfzo6_1280.jpg" data-toggle="lightbox" class="col-sm-4">
-                                    <img src="//36.media.tumblr.com/de356cd6570d7c26e73979467f296f67/tumblr_mrn3dc10Wa1r1thfzo6_1280.jpg" class="img-responsive">
+                                <a href="columbia/1/renderhippies_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" class="col-sm-4">
+                                    <img src="columbia/1/renderhippies_sm.jpg" class="img-responsive">
                                 </a>
                             </div>
                         </div>
