--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,12 @@
 	</head>
 	<body>
   
-      <iframe width="100%" height="800" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://issuu.com/shugars/docs/shugars_portfolio_2016"></iframe>
+      <iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://issuu.com/shugars/docs/shugars_portfolio_2016"></iframe>
         <br />
         <h5>
-            <a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">Link</a>
+        <p align ="center">
+            <a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
+        </p>
         </h5>
       </iframe>
       
