--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
         <h5>
-        <a hred="index.html">       Miranda Shugars | Online Repository</a>
+        <a href="index.html">       Miranda Shugars | Online Repository</a>
         </h5>
         	<br>
         	<br>
