--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/styles.css" rel="stylesheet">
+		<link href="css/stylish-portfolio.css" rel="stylesheet">
+
 	</head>
 	<body>
 <div class="container">
   <div class="row">
             <h1>Miranda Shugars</h1>
             <h4>Online Repository</h4>
-            <br>
-            <br>
     <hr>
     <a href="#contact">Contact | </a>
     <a href="resume.html">Resume | </a>
@@ -147,7 +147,9 @@
 	</body>
 	
 	<footer>
-	<hr>
+	<div class="container">
+  		<div class="row">
+		<hr>
                     <!--<p>3481 Melrose Place
                         <br>Beverly Hills, CA 90210</p>-->
                     <ul class="list-unstyled">
@@ -155,7 +157,7 @@
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="miranda.shugars@gmail.com">miranda.shugars@gmail.com</a>
                         </li>
                     </ul>
-        </hr>
+		<hr>
 
                     <br>
                     <!--<ul class="list-inline">
@@ -172,5 +174,7 @@
                     <hr class="small">-->
                     <p class="text-muted">Copyright &copy; Shugars 2016</p>
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+        </div>
+        </div>
     </footer>
 </html>
