--- a/portfolio.html
+++ b/portfolio.html
@@ -10,22 +10,28 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
+<div class="container">
+  <div class="row">
 	<h5>
-        <a href="index.html">       Miranda Shugars | Online Repository</a>
+        <a href="index.html">Miranda Shugars </a>| Online Repository
 	</h5>
+	<hr>
         <br>
+        <div class="row">
+      		<iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//e.issuu.com/embed.html#0/38910433"></iframe>
         <br>
-  
-      <iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//e.issuu.com/embed.html#0/38910433"></iframe>
-        <br />
-        <h5>
-        <p align ="center">
+	 <div class="row">
+	 	<hr>
+		<h5>
+        	<p align ="center">
         	Viewing Problems? Try
         	<br>
-            <a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
-        </p>
-        </h5>
-      </iframe>
-      
-  	</body>
+            	<a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
+		</p>
+		</h5>
+	</div>
+	</div>
+	</div>
+	</div>
+  </body>
 </html>
