--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,8 @@
             	<a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
 		</p>
 		</h5>
+		<hr>
+		<p class="text-muted">Copyright &copy; Shugars 2016</p>
 	</div>
 	</div>
 	</div>
