--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	</body>
 	
 	<footer>
-	<div class="container">
+	<div id = "contact" class="container">
   		<div class="row">
 		<hr>
                     <!--<p>3481 Melrose Place
