--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,4 @@
+
   <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -10,12 +11,20 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-        <h5>
-        <a href="index.html">       Miranda Shugars | Online Repository</a>
-        </h5>
-        	<br>
-        	<br>
-            <embed src="shugars_cv (2).pdf" width="500" height="375" type='application/pdf'>
+<div class="container">
+  <div class="row">
+	<h5>
+        <a href="index.html">Miranda Shugars </a>| Online Repository
+	</h5>
+	<hr>
+        <div class="row">
+      		<iframe width="100%" height="800" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="shugars_CV (2).pdf"></iframe>
 
-  	</body>
+		<hr>
+		<p class="text-muted">Copyright &copy; Shugars 2016</p>
+	</div>
+	</div>
+	</div>
+	</div>
+  </body>
 </html>
