--- a/resume.html
+++ b/resume.html
@@ -19,12 +19,17 @@
 	<hr>
         <div class="row">
       		<iframe width="100%" height="800" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="shugars_CV (2).pdf"></iframe>
-
 		<hr>
-		<p class="text-muted">Copyright &copy; Shugars 2016</p>
 	</div>
 	</div>
 	</div>
 	</div>
   </body>
+  <footer>
+  <div class="container">
+  	<div class="row">
+  	<p class="text-muted">Copyright &copy; Shugars 2016</p>
+  	</div>
+  </div>
+  </footer>
 </html>
