--- a/index.html
+++ b/index.html
@@ -24,26 +24,10 @@
     <a href="resume.html">Resume | </a>
     <a href="portfolio.html">Online Portfolio</a>
     <hr>
-
-           <!-- <div class="row">
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Puddle" href="#"><img class="thumbnail img-responsive" src="photo/ph1/1_sm.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 2" href="#"><img class="thumbnail img-responsive" src="photo/ph1/2_sm.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 3" href="#"><img class="thumbnail img-responsive" src="photo/ph1/3_sm.jpg"></a></div>
-      <div class="col-lg-4 col-sm-4 col-xs-6"><a title="Image 4" href="#"><img class="thumbnail img-responsive" src="columbia/1/sectionNOZOMBIES2_sm.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 5" href="#"><img class="thumbnail img-responsive" src="columbia/1/axo explosion_sm.jpg"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 6" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/449955/FFF"></a></div>
-      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 8" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/777"></a></div>
-      <div class="col-lg-3 col-sm-3 col-xs-6"><a title="Image 9" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/992233"></a></div>
-      <div class="col-lg-3 col-sm-3 col-xs-6"><a title="Image 10" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/EEE"></a></div>
-      <div class="col-lg-3 col-sm-3 col-xs-1"><a title="Image 11" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/449955/FFF"></a></div>
-      <div class="col-lg-2 col-sm-3 col-xs-6"><a title="Image 12" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/DDD"></a></div>
-      <div class="col-lg-3 col-sm-3 col-xs-6"><a title="Image 13" href="#"><img class="thumbnail img-responsive" src="//placehold.it/600x350/992233"></a></div>
-    </div> -->
-    
                         <div class="row">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="row">
-                                <a href="photo/ph1/1_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+                                <a href="columbia/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
                                     <img src="photo/ph1/1_sm.jpg" class="img-responsive">
                                 </a>
                                 <a href="photo/ph1/2_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
