--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
                         <div class="row">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="row">
-                                <a href="columbia/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
-                                    <img src="photo/ph1/1_sm.jpg" class="img-responsive">
+                                <a href="content/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+                                    <img src="content/c1.1_thb.jpg" class="img-responsive">
                                 </a>
-                                <a href="photo/ph1/2_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
-                                    <img src="photo/ph1/2_sm.jpg" class="img-responsive">
+                                <a href="content/c1.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+                                    <img src="content/c1.2_thb.jpg" class="img-responsive">
                                 </a>
-                                <a href="photo/ph1/3_sm.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
-                                    <img src="photo/ph1/3_sm.jpg" class="img-responsive">
+                                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+                                    <img src="content/c1.3_thb.jpg" class="img-responsive">
+                                </a>
+                                <a href="content/c1.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+                                    <img src="content/c1.4_thb.jpg" class="img-responsive">
                                 </a>
                             </div>
                             <br>
