--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	                </a>
             </div>
             <br>
-        	<div class="row">
+	    <div class="row">
 	                <a href="content/c3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
 	                    <img src="content/c3.1_thb.jpg" class="img-responsive">
 	                </a>
@@ -68,6 +68,65 @@
 	                </a>
 	                <a href="content/c3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c3.4_thb.jpg" class="img-responsive">
+	                </a>
+            </div>
+                        <div class="row">
+	                <a href="content/h2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                    <img src="content/h2.1_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                    <img src="content/h2.2_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h2.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/h2.3_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h2.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/h2.4_thb.jpg" class="img-responsive">
+	                </a>
+            </div>
+            <br>
+            <div class="row">
+	                <a href="content/h3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                    <img src="content/h3.1_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h3.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                    <img src="content/h3.2_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h3.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/h3.3_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/h3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/h3.4_thb.jpg" class="img-responsive">
+	                </a>
+            </div>
+            <br>
+	    <div class="row">
+	                <a href="content/s1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                    <img src="content/s1_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                    <img src="content/s2_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/s3_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/s4_thb.jpg" class="img-responsive">
+	                </a>
+            </div>
+            <br>
+	    <div class="row">
+	                <a href="content/s5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                    <img src="content/s5_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                    <img src="content/s6_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s7.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/s7_thb.jpg" class="img-responsive">
+	                </a>
+	                <a href="content/s8.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                    <img src="content/s8_thb.jpg" class="img-responsive">
 	                </a>
             </div>
         </div>
