--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,9 @@
 	</h5>
 	<hr>
         <div class="row">
-      		<iframe width="100%" height="800" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="shugars_CV (2).pdf"></iframe>
-		<hr>
+		<object data="shugars_CV (2).pdf" type="application/pdf" width="100%" height="100%">
+		   <p><b>Oh no!</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="shugars_CV (2).pdf">Download PDF</a>.</p>
+		</object>
 	</div>
 	</div>
 	</div>
