--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<object data="shugars_CV (2).pdf" type="application/pdf" width="100%" height="100%">
+		<object data="shugars_CV (2).pdf" type="application/pdf" width="80%" height="750">
 		   <p><b>Oh no!</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="shugars_CV (2).pdf">Download PDF</a>.</p>
 		</object>
 	</div>
