--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,8 @@
 	</h5>
 	<hr>
         <div class="row">
-		<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1050">
+        	<embed scr="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" width="80%" height="1050">
+		<!--<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1050">-->
 		   <p><b>Oh no!</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="shugars_CV (2).pdf">Download PDF</a>.</p>
 		</object>
 	</div>
