--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,9 @@
 	</h5>
 	<hr>
         <div class="row">
-        	<embed scr="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" width="80%" height="1025"></embed>
-		<!--<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1050">-->
-		   <h5>Oh no!<br> This browser does not support PDFs.<br> Please download the PDF to view it:<br> <a href="shugars_CV (2).pdf">Download PDF</a>.</h5>
-		<!--</object>-->
+		<<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1025">
+		   <h5>Oh no!<br><br> This browser does not support PDFs.<br> Please download the PDF to view it:<br><br> <a href="shugars_CV (2).pdf">Download PDF</a></h5>
+		</object>
 	</div>
 	</div>
 	</div>
