--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1025">
+		<object data="shugars_CV (2).pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
 		   <h5>Oh no!<br><br> This browser does not support PDFs.<br> Please download the PDF to view it:<br><br> <a href="shugars_CV (2).pdf">Download PDF</a></h5>
 		</object>
 	</div>
