--- a/resume.html
+++ b/resume.html
@@ -19,10 +19,19 @@
 	<hr>
         <div class="row">
 		<object data="shugars_CV.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="80%" height="1040">
-		   <p align ="center">
-		   <h5>Oh no!<br><br> This browser does not support PDFs.<br> Please download the PDF to view it:<br><br> <a href="shugars_CV.pdf">| Download PDF |</a></h5>
-		   </p>
 		</object>   
+	</div>
+	<div class="row">
+		<hr>
+		<h5>
+        	<p align ="center">
+        	Viewing Problems? Try
+        	<br>
+            	<a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
+		</p>
+		</h5>
+		<hr>
+	</div>
 	</div>
 	</div>
 	</div>
