--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
         	<p align ="center">
         	Viewing Problems? Try
         	<br>
-            	<a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
+            	<a href="shugars_CV.pdf">     | Direct Link | </a>
 		</p>
 		</h5>
 		<hr>
