--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<object data="shugars_CV.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="80%" height="1040">
+		<object data="shugars_CV.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
 		</object>   
 	</div>
 	<div class="row">
