--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,15 @@
 	</h5>
 	<hr>
         <div class="row">
-      		<iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//e.issuu.com/embed.html#0/38910433"></iframe>
-        <br>
+		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="80%" height="1040">
+		</object>        
 	 <div class="row">
 	 	<hr>
 		<h5>
         	<p align ="center">
         	Viewing Problems? Try
         	<br>
-            	<a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245">     | Direct Link | </a>
+            	<a href="shugars_portfolio.pdf">     | Direct Link | </a>
 		</p>
 		</h5>
 		<hr>
