--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,10 @@
         <a href="index.html">Miranda Shugars </a>| Online Repository
 	</h5>
 	<hr>
-        <div class="row">
-		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="100%" height="1040">
-		</object>        
+        <div class="embed-responsive">
+		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="100%" height="100%">
+		</object>  
+	</div>
 	 <div class="row">
 	 	<hr>
 		<h5>
@@ -30,7 +31,6 @@
 		</h5>
 		<hr>
 		<p class="text-muted">Copyright &copy; Shugars 2016</p>
-	</div>
 	</div>
 	</div>
 	</div>
