--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 	                <a href="content/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
 	                    <img src="content/c1.1_thb.jpg" class="img-responsive">
 	                </a>
+		    <div class="hovereffect">
 	                <a href="content/c1.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
 	                    <img src="content/c1.2_thb.jpg" class="img-responsive">
 	                </a>
+		    </div>
 	                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c1.3_thb.jpg" class="img-responsive">
 	                </a>
