--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 	                    <img src="content/c1.2_thb.jpg" class="img-responsive">
 	                </a>
 		    </div>
+		    <div class="hover">
 	                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c1.3_thb.jpg" class="img-responsive">
 	                </a>
+		    </div>
 	                <a href="content/c1.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c1.4_thb.jpg" class="img-responsive">
 	                </a>
