--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <a href="index.html">Miranda Shugars </a>| Online Repository
 	</h5>
 	<hr>
-        <div class="embed-responsive">
+        <div class="row">
 		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="100%" height="100%">
 		</object>  
 	</div>
