--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="100%" height="100%">
+		<object data="shugars_portfolio.pdf#toolbar=0?navpanes=0?scrollbar=0" type="application/pdf" width="100%" height="1040">
 		</object>  
 	</div>
 	 <div class="row">
