--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h1>Miranda Shugars</h1>
             <h4>Online Repository</h4>
     <hr>
-    <a href="#contact">Contact | </a>
-    <a href="resume.html">Resume | </a>
+    <a href="#contact">Contact</a> | 
+    <a href="resume.html">Resume</a> | 
     <a href="portfolio.html">Online Portfolio</a>
     <hr>
         <div class="row">
@@ -31,16 +31,12 @@
 	                <a href="content/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
 	                    <img src="content/c1.1_thb.jpg" class="img-responsive">
 	                </a>
-		    <div class="hovereffect">
 	                <a href="content/c1.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
 	                    <img src="content/c1.2_thb.jpg" class="img-responsive">
 	                </a>
-		    </div>
-		    <div class="hover">
 	                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c1.3_thb.jpg" class="img-responsive">
 	                </a>
-		    </div>
 	                <a href="content/c1.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
 	                    <img src="content/c1.4_thb.jpg" class="img-responsive">
 	                </a>
