--- a/index.html
+++ b/index.html
@@ -29,106 +29,106 @@
         <div class="row">
         <div class="col-md-offset-2 col-md-8">
             <div class="row">
-	                <a href="content/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/c1.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="Bank at work, section with courtyard." class="col-sm-3">
 	                    <img src="content/c1.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c1.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/c1.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="Exploded material axonometric: courtyard, concrete, partitions, glass and stone facade, sedum gardens." class="col-sm-3">
 	                    <img src="content/c1.2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c1.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="Section through time: the zombies arrive" class="col-sm-3">
 	                    <img src="content/c1.3_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c1.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c1.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Human Bank" data-footer="Bank in use after apocalypse, humans re-valued." class="col-sm-3">
 	                    <img src="content/c1.4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
             <br>
             <div class="row">
-	                <a href="content/c2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/c2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Urban agricultural labyrinth and collecting pools." class="col-sm-3">
 	                    <img src="content/c2.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/c2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" class="Water retention pools and expanding farm.">
 	                    <img src="content/c2.2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c2.5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c2.5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Central cemetery pool and funerary space." class="col-sm-3">
 	                    <img src="content/c2.5_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c2.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c2.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Motion through site: the living and the dead." class="col-sm-3">
 	                    <img src="content/c2.4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
             <br>
 	    <div class="row">
-	                <a href="content/c3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/c3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Avian Park" data-footer="Sections through park and reserach facility." class="col-sm-3">
 	                    <img src="content/c3.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c3.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/c3.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Avian Park" data-footer="Raised park condition overlooking avian preserve, with water filtration pools." class="col-sm-3">
 	                    <img src="content/c3.2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c3.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c3.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Avian Park" data-footer="Facultative Lagoons filter wastewater and stormwater, distribute through wetlands to the ocean." class="col-sm-3">
 	                    <img src="content/c3.3_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/c3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Avian Park" data-footer="Design team re-imagined as endangered water birds." class="col-sm-3">
 	                    <img src="content/c3.4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
 		  <br>
                         <div class="row">
-	                <a href="content/h2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/h2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Peep Show" data-footer="Photos through curtain, displayed shrine-like." class="col-sm-3">
 	                    <img src="content/h2.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/h2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Peep Show" data-footer="Photos on curtain, approaching inner shrine." class="col-sm-3">
 	                    <img src="content/h2.2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h2.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/h2.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Peep Show" data-footer="Model with her best sexual experience written across her torso and hands." class="col-sm-3">
 	                    <img src="content/h2.3_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h2.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/h2.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Peep Show" data-footer="Model with her best sexual experience written down her back." class="col-sm-3">
 	                    <img src="content/h2.4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
             <br>
             <div class="row">
-	                <a href="content/h3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/h3.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Southern Yellow Pine: Bench" data-footer="Dovetail joints, hand-cut; this bench has no glue or hardware." class="col-sm-3">
 	                    <img src="content/h3.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h3.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/h3.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Southern Yellow Pine: Bench" data-footer="Simple construction with cross piece." class="col-sm-3">
 	                    <img src="content/h3.2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h3.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/h3.3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Southern Yellow Pine: Lantern" data-footer="Lantern of thin wood slices, proximity-activated by arduino controlled sonic sensor." class="col-sm-3">
 	                    <img src="content/h3.3_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/h3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/h3.4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Southern Yellow Pine: Lantern and Fountain" data-footer="Proximity-activated lantern with colored lights behind glass-panel fountain." class="col-sm-3">
 	                    <img src="content/h3.4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
             <br>
 	    <div class="row">
-	                <a href="content/s1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/s1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Fox" class="col-sm-3">
 	                    <img src="content/s1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/s2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Mardi Gras Mask" class="col-sm-3">
 	                    <img src="content/s2_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/s3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Man on top of Montserrat" class="col-sm-3">
 	                    <img src="content/s3_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/s4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Friends in winter" class="col-sm-3">
 	                    <img src="content/s4_thb.jpg" class="img-responsive">
 	                </a>
             </div>
             <br>
 	    <div class="row">
-	                <a href="content/s5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="Memorial museum" class="col-sm-3">
+	                <a href="content/s5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Angel on Bridge in Berlin" class="col-sm-3">
 	                    <img src="content/s5_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" class="col-sm-3">
+	                <a href="content/s6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Window-Sitters in Berlin" class="col-sm-3">
 	                    <img src="content/s6_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s7.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/s7.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Print: Left Hand/ Right Hand" class="col-sm-3">
 	                    <img src="content/s7_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/s8.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Pearl Harbor" data-footer="USS Arizona, rusted" class="col-sm-3">
+	                <a href="content/s8.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Print: The Most Beautiful Suicide" class="col-sm-3">
 	                    <img src="content/s8_thb.jpg" class="img-responsive">
 	                </a>
             </div>
