--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	                <a href="content/c2.1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Urban agricultural labyrinth and collecting pools." class="col-sm-3">
 	                    <img src="content/c2.1_thb.jpg" class="img-responsive">
 	                </a>
-	                <a href="content/c2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" class="Water retention pools and expanding farm.">
+	                <a href="content/c2.2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Water retention pools and expanding farm." class="col-sm-3">
 	                    <img src="content/c2.2_thb.jpg" class="img-responsive">
 	                </a>
 	                <a href="content/c2.5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Central Park Labyrinth" data-footer="Central cemetery pool and funerary space." class="col-sm-3">
