--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<![endif]-->
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
-		<link href="css/stylish-portfolio.css" rel="stylesheet">
+		<!--<link href="css/stylish-portfolio.css" rel="stylesheet">-->
 
 	</head>
 	<body>
