--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <hr>
     <a href="#contact">Contact</a> | 
     <a href="resume.html">Resume</a> | 
-    <a href="portfolio.html">Online Portfolio</a>
+    <a href="portfolio.html">Online Portfolio</a> | 
     <a href="http://sardinesandcappuccinos.blogspot.com/">Poetry</a>
     <hr>
         <div class="row">
