--- a/index.html
+++ b/index.html
@@ -226,18 +226,18 @@
                         </li>
                     </ul>
 		<hr>
-                    <!--<ul class="list-inline">
+                    <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="http://sardinesandcappuccinos.blogspot.com/"><i class="fa fa-blogger fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://vimeo.com/user9567907"><i class="fa fa-vimeo fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
-                    <hr class="small">-->
+                    <hr class="small">
                     <p class="text-muted">Copyright &copy; Shugars 2016</p>
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
         </div>
