--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
 		<meta name=viewport content='width=800'>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		[if lt IE 9]>
+		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<!--[endif]-->
+		[endif]-->
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/stylish-portfolio.css" rel="stylesheet">
