--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/stylish-portfolio.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	</head>
 	<body>
