--- a/index.html
+++ b/index.html
@@ -222,20 +222,20 @@
                     <!--<p>3481 Melrose Place
                         <br>Beverly Hills, CA 90210</p>-->
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (601) 618-9960</li>
+                        <li><i class="fa fa-phone fa-fw"></i> +1 (601) 618-9960</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="miranda.shugars@gmail.com">miranda.shugars@gmail.com</a>
                         </li>
                     </ul>
 		<hr>
                     <ul class="list-inline">
                         <li>
-                            <a href="http://sardinesandcappuccinos.blogspot.com/"><i class="fa fa-blogger fa-fw fa-3x"></i></a>
+                            <a href="https://www.linkedin.com/in/mshugars"><i class="fa fa-linkedin fa-fw fa-1x"></i></a>
                         </li>
                         <li>
-                            <a href="https://vimeo.com/user9567907"><i class="fa fa-vimeo fa-fw fa-3x"></i></a>
+                            <a href="https://vimeo.com/user9567907"><i class="fa fa-vimeo fa-fw fa-1x"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-3x"></i></a>
+                            <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-1x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
