--- a/index.html
+++ b/index.html
@@ -229,18 +229,18 @@
 		<hr>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.linkedin.com/in/mshugars"><i class="fa fa-linkedin fa-fw fa-1x"></i></a>
+                            <a href="https://www.linkedin.com/in/mshugars"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="https://vimeo.com/user9567907"><i class="fa fa-vimeo fa-fw fa-1x"></i></a>
+                            <a href="https://vimeo.com/user9567907"><i class="fa fa-vimeo fa-fw fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-1x"></i></a>
+                            <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-2x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Shugars 2016</p>
-        <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+        <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-angle-up fa-fw fa-2x"></i></a>
         </div>
         </div>
     </footer>
