--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                         <li>
                             <a href="https://www.pinterest.com/mirandashugars/"><i class="fa fa-pinterest fa-fw fa-2x"></i></a>
                         </li>
-                    </ul>
+				<a href="#top">Top<i class="fa fa-angle-up fa-fw fa-2x"></i></a>
+		      </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Shugars 2016</p>
-        <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-angle-up fa-fw fa-2x"></i></a>
         </div>
         </div>
     </footer>
