--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <hr>
     <a href="#contact">Contact</a> | 
     <a href="resume.html">Resume</a> | 
-    <a href="portfolio.html">Online Portfolio</a> | 
-    <a href="http://sardinesandcappuccinos.blogspot.com/">Poetry</a>
+    <a href="portfolio.html">Online Portfolio</a><!-- | 
+    <a href="http://sardinesandcappuccinos.blogspot.com/">Poetry</a>-->
     <hr>
         <div class="row">
         <div class="col-md-offset-2 col-md-8">
