--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,9 @@
 	</h5>
 	<hr>
         <div class="row">
-		<object data="shugars_CV.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
-		</object>   
+		<iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/0B2hH5-0tW8qTVHJvc2JKczRpLTA/view?usp=sharing" style="width:600px; height:500px;" frameborder="0"></iframe>
+		<!--<object data="shugars_CV.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
+		</object> -->
 	</div>
 	<div class="row">
 		<hr>
@@ -31,8 +32,6 @@
 		</p>
 		</h5>
 		<hr>
-	</div>
-	</div>
 	</div>
 	</div>
 	</div>
